1999-10-23  Callum McKenzie  <callum@localhost>

	* blockops.h, blockops.cpp, tetris.h, tetris.cpp, TODO : 
	  added code to allow pre-filling of the field with 
	  random blocks.

1999-10-04  Marcin Gorycki  <mgo@olicom.dk>

	* pix/Makefile.am, vortex-bg.png: added vortex-bg.png 
	  by Jon Abbott jca8929@garnet.acns.fsu.edu
	 
1999-09-10  pablo  <pablo@???>

	* gnometris.desktop: added estonian descriptions

1999-09-08  nakai  <nakai@???>

	* gnometris.desktop: ja Update from ITANI Eiichoro

1999-07-09  kmaraas  <kmaraas@???>

	* gnometris.desktop: Added Norwegian translation.


1999-05-06  Janusz Marcin Gorycki  <mgo@spiderman.pl.olicom.com>

	* tetris.h, tetris.cpp, field.h, field.cpp, blockops.h, blockops.cpp:
	using canvas widget

	* pix/7blocks-tig.png, pix/Makefile.am: added 7blocks-tig.png

1999-04-17  mawarkus  <mawarkus@???>

	* gnometris.desktop: More German l10n.

1999-04-08  mjr  <mjr@???>

	* gnometris.desktop:
	Updated and completed finnish translations of messages and desktop files

1999-04-06  kloczek  <kloczek@???>

	* Makefile.am:
	- fixed all Makefiles.am to allow use DESTDIR in "make install,
	- fixed perm on gnometris.scores (must be 644 instead 666).


1999-03-16  Janusz Marcin Gorycki  <mgo@spiderman.pl.olicom.com>

	* tetris.h, tetris.cpp: patches from Ian applied

1999-03-15  Janusz Marcin Gorycki  <mgo@spiderman.pl.olicom.com>

	* tetris.h, tetris.cpp:
	changes suggested by Ian Peters - style guid compliance

1999-02-25  Marcin Gorycki  <mgo@olicom.dk>

	* tetris.h, tetris.cpp: "variable gravity" down-arrow key

1999-02-23  Marcin Gorycki  <mgo@olicom.dk>

	* tetris.h, tetris.cpp, blockops.h, blockops.cpp: fast fall fixed

1999-02-21  sipan  <sipan@mit.edu>

	* gnometris.desktop: Added Russian lines to the *.desktop files


1999-02-19  Janusz Marcin Gorycki  <mgo@olicom.dk>

	* tetris.h, tetris.cpp, field.cpp: smooth fast fall, backgrounds

	* pix/Makefile.am, pix/*-bg.png: added background pixmaps
